--- a/src/blackjack/BlackjackUI2.form
+++ b/src/blackjack/BlackjackUI2.form
@@ -107,7 +107,7 @@
                       </Group>
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="23" max="32767" attributes="0"/>
+                  <EmptySpace pref="15" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -138,6 +138,8 @@
                                       <Component id="DisplayedPlayerCardImage1jLabel" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="DisplayedPlayerCardImage2jLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="DisplayedPlayerCardImage3jLabel" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
@@ -165,7 +167,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -176,6 +178,7 @@
                           <Component id="DisplayedPlayerCardImage2jLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="DisplayedDealerCardImage1jLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="FirstDisplayedDealerCardImage2jLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="DisplayedPlayerCardImage3jLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="34" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -262,6 +265,17 @@
                   <Font name="Tahoma" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Value"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="DisplayedPlayerCardImage3jLabel">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="18" style="0"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/images/placeholdercard.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Card 3"/>
               </Properties>
             </Component>
           </SubComponents>
