--- a/src/blackjack/BlackjackUI2.form
+++ b/src/blackjack/BlackjackUI2.form
@@ -63,7 +63,9 @@
                           <Component id="HitjButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="StayjButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                          <Component id="ExitApplicationjLabel" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="BetjTextField" min="-2" pref="95" max="-2" attributes="0"/>
@@ -94,6 +96,7 @@
                                   <Component id="HitjButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="StayjButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="PlaceBetjButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ExitApplicationjLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="BalancejTextField" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -107,7 +110,7 @@
                       </Group>
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="15" max="32767" attributes="0"/>
+                  <EmptySpace pref="14" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -372,6 +375,20 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="StayjButtonActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="ExitApplicationjLabel">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="18" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/shutdown_32px.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Exit"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ExitApplicationjLabelMouseClicked"/>
           </Events>
         </Component>
       </SubComponents>
